<resources>
    <string name="google_maps_key">AIzaSyC85bImdwyLiTIUg0gQgKJiRCgxIItgnpM</string>
    <string name="app_name">Assignment_2</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Bottom Navigation Menu -->
    <string name="menu_map">Map</string>
    <string name="menu_donations">Donations</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_profile">Profile</string>

    <!-- Common Menu Items -->
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- Donor Menu Items -->
    <string name="menu_donation_history">Donation History</string>
    <string name="menu_upcoming_donations">Upcoming Donations</string>

    <!-- Site Manager Menu Items -->
    <string name="menu_manage_site">Manage Site</string>
    <string name="menu_manage_events">Manage Events</string>
    <string name="menu_registered_donors">Registered Donors</string>
    <string name="menu_site_statistics">Site Statistics</string>

    <!-- Admin Menu Items -->
    <string name="menu_manage_sites">Manage All Sites</string>
    <string name="menu_manage_users">Manage Users</string>
    <string name="menu_system_reports">System Reports</string>
    <string name="menu_analytics">Analytics</string>

    <!-- Map related strings -->
    <string name="filter_map">Filter Map</string>

    <!-- Donation related strings -->
    <string name="upcoming_donations">Upcoming Donations</string>
    <string name="past_donations">Past Donations</string>
    <string name="no_upcoming_donations">You have no upcoming donation appointments</string>
    <string name="no_past_donations">You have no past donations</string>

    <!-- Notifications related strings -->
    <string name="no_notifications">You have no notifications</string>

    <string name="cancel_donation">Cancel Donation</string>

    <string name="register_new_donation">Register New Donation</string>
    <string name="no_registered_donors">No donors are currently registered for this event</string>
    <string name="no_donation_sites">No donation sites found. Click the + button to add a new site</string>
    <string name="no_users_found">No users found. Try adjusting your search or filter criteria</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>

    <!-- Profile String -->
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_information">Contact Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="blood_type">Blood Type</string>
    <string name="donation_statistics">Donation Statistics</string>
    <string name="total_donations">Total Donations</string>
    <string name="donation_history">Donation History</string>

    <!-- Profile Edit Dialog -->
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>