<?xml version="1.0" encoding="utf-8"?>
<!-- menu_admin_drawer.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage_sites"
            android:icon="@drawable/ic_manage_sites"
            android:title="@string/menu_manage_sites" />

        <item
            android:id="@+id/nav_manage_users"
            android:icon="@drawable/ic_manage_users"
            android:title="@string/menu_manage_users" />

        <item
            android:id="@+id/nav_system_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/menu_system_reports" />

        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_analytics"
            android:title="@string/menu_analytics" />

        <item
            android:id="@+id/nav_system_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_system_settings" />
    </group>

    <item android:title="@string/menu_account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>